Search bar; service details; working on service reservation

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -134,9 +134,13 @@
   "allZones_label": "Tutte le province",
   "allServices_label": "Tutti i servizi",
   "services_empty": "Nessun servizio trovato",
+  "service_viewprofile": "Vedi profilo",
+  "service_cost_free": "gratis",
+  "service_new_request": "Richiedi disponibilità",
+  "service_request": "Richiesta servizio",
   "prof_competences_label": "Competenze",
   "prof_descrizione_label": "Descrizione",
-  "search_prof": "Ricerca professioni",
+  "search_professionals": "Ricerca professioni",
   "email_placeholder": "Inserisci la tua email",
   "pec_placeholder": "Inserisci la tua PEC *",
   "name_placeholder": "Nome *",
