messages for service notification

--- a/gi-pro-web/src/main/resources/locale/messages_it.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_it.properties
@@ -1,10 +1,10 @@
-NotRegisteredException=Codice di verifica non valido o già utilizzato
-NotConfirmedException=La registrazione non è stata confermata
+NotRegisteredException=Utente o password non validi
+NotConfirmedException=La registrazione non è stata confirmata
 RegistrationException=E' stato rilevato un problema. Si prega di riprovare più tardi
 AlreadyRegisteredException=L'email è già in uso
 InvalidDataException=I valori dei campi non sono validi
 InvalidPasswordException=Utente o password non validi
-UnauthorizedException=Accesso alla risorsa non autorizzato o profilo non esistente
+
 
 lbl_login_title=GiPro Sign In
 lbl_login=Sign In
@@ -40,19 +40,83 @@ lbl_resetsuccess_text=Apri il link nella email di conferma per aggiornare le cre
 lbl_changesuccess_title=La password è stata aggiornata!
 lbl_changesuccess_text=Hai aggiornato le credenziali.
 
-confirmation.subject=CNF: conferma la registrazione 
+confirmation.subject=CNF: Conferma la registrazione 
 reset.subject=CNF: Richiesta di cambiamento di credenziali
 
-notif_NEW_SERVICE_REQUEST_sostituzione=Nuova richiesta
-notif_NEW_SERVICE_OFFER_sostituzione=Nuova disponibilità
-
-notif_SERVICE_REQUEST_DELETED_sostituzione=Richiesta annulata
-notif_SERVICE_OFFER_DELETED_sostituzione=Disponibilità annulata
-notif_NEW_APPLICATION_sostituzione=Nuova applicazione
-notif_APPLICATION_ACCEPTED_sostituzione=Richiesta accettata
-notif_APPLICATION_REJECTED_sostituzione=Richiesta rifiutata
-notif_APPLICATION_DELETED_sostituzione=Applicazione annulata
-
+#SOSTITUZIONE UDIENZA
+notif_NEW_SERVICE_REQUEST_sostituzioneudienza=Nuova richiesta di sostituzione udienza
+notif_NEW_SERVICE_OFFER_sostituzioneudienza=Nuova disponibilità sostituzione udienza
+notif_SERVICE_REQUEST_DELETED_sostituzioneudienza=Richiesta di sostituizione annulata
+notif_SERVICE_OFFER_DELETED_sostituzioneudienza=Disponibilità di sostituizione annulata
+notif_NEW_APPLICATION_sostituzioneudienza=Nuova applicazione di sostituizione 
+notif_APPLICATION_ACCEPTED_sostituzioneudienza=Richiesta di sostituizione accettata
+notif_APPLICATION_REJECTED_sostituzioneudienza=Richiesta di sostituizione rifiutata
+notif_APPLICATION_DELETED_sostituzioneudienza=Applicazione di sostituizione annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_sostituzione={0} {1} richiede sostituzione udienza per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_sostituzione={0} {1} è disponibile a sostituzione udienza per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_sostituzioneudienza={0} {1} richiede sostituzione udienza per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_sostituzioneudienza={0} {1} è disponibile a sostituzione udienza per {2}, il {3}
+
+#STAMPANTE
+notif_NEW_SERVICE_REQUEST_stampante=Nuova richiesta di stampante 
+notif_NEW_SERVICE_OFFER_stampante=Nuova disponibilità stampante
+notif_SERVICE_REQUEST_DELETED_stampante=Richiesta di stampante annulata
+notif_SERVICE_OFFER_DELETED_stampante=Disponibilità di stampante annulata
+notif_NEW_APPLICATION_stampante=Nuova applicazione di stampante
+notif_APPLICATION_ACCEPTED_stampante=Richiesta di stampante accettata
+notif_APPLICATION_REJECTED_stampante=Richiesta di stampante rifiutata
+notif_APPLICATION_DELETED_stampante=Applicazione di stampante annulata
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_stampante={0} {1} richiede stampante per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_stampante={0} {1} è disponibile al servizio stampante per {2}, il {3}
+
+#FAX
+notif_NEW_SERVICE_REQUEST_fax=Nuova richiesta di fax 
+notif_NEW_SERVICE_OFFER_fax=Nuova disponibilità fax
+notif_SERVICE_REQUEST_DELETED_fax=Richiesta di fax annulata
+notif_SERVICE_OFFER_DELETED_fax=Disponibilità di fax annulata
+notif_NEW_APPLICATION_fax=Nuova applicazione di stampante
+notif_APPLICATION_ACCEPTED_fax=Richiesta di fax accettata
+notif_APPLICATION_REJECTED_fax=Richiesta di fax rifiutata
+notif_APPLICATION_DELETED_fax=Applicazione di fax annulata
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_fax={0} {1} richiede fax per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_fax={0} {1} è disponibile al servizio fax per {2}, il {3}
+
+#POSTAZIONE
+notif_NEW_SERVICE_REQUEST_postazione=Nuova richiesta di postazione 
+notif_NEW_SERVICE_OFFER_postazione=Nuova disponibilità postazione
+notif_SERVICE_REQUEST_DELETED_postazione=Richiesta di postazione annulata
+notif_SERVICE_OFFER_DELETED_postazione=Disponibilità di postazione annulata
+notif_NEW_APPLICATION_postazione=Nuova applicazione di stampante
+notif_APPLICATION_ACCEPTED_postazione=Richiesta di postazione accettata
+notif_APPLICATION_REJECTED_postazione=Richiesta di postazione rifiutata
+notif_APPLICATION_DELETED_postazione=Applicazione di postazione annulata
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_postazione={0} {1} richiede postazione per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_postazione={0} {1} è disponibile al servizio postazione per {2}, il {3}
+
+#SALA
+notif_NEW_SERVICE_REQUEST_sala=Nuova richiesta di sala 
+notif_NEW_SERVICE_OFFER_sala=Nuova disponibilità sala
+notif_SERVICE_REQUEST_DELETED_sala=Richiesta di sala annulata
+notif_SERVICE_OFFER_DELETED_sala=Disponibilità di sala annulata
+notif_NEW_APPLICATION_sala=Nuova applicazione di stampante
+notif_APPLICATION_ACCEPTED_sala=Richiesta di sala accettata
+notif_APPLICATION_REJECTED_sala=Richiesta di sala rifiutata
+notif_APPLICATION_DELETED_sala=Applicazione di sala annulata
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_sala={0} {1} richiede sala per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_sala={0} {1} è disponibile al servizio sala per {2}, il {3}
+
+#CONVERSAZIONE
+notif_NEW_SERVICE_REQUEST_conversazione=Nuova richiesta di conversazione 
+notif_NEW_SERVICE_OFFER_conversazione=Nuova disponibilità conversazione
+notif_SERVICE_REQUEST_DELETED_conversazione=Richiesta di conversazione annulata
+notif_SERVICE_OFFER_DELETED_conversazione=Disponibilità di conversazione annulata
+notif_NEW_APPLICATION_conversazione=Nuova applicazione di stampante
+notif_APPLICATION_ACCEPTED_conversazione=Richiesta di conversazione accettata
+notif_APPLICATION_REJECTED_conversazione=Richiesta di conversazione rifiutata
+notif_APPLICATION_DELETED_conversazione=Applicazione di conversazione annulata
+# name/surname of the offering person; poi name, date/time of the request
+notif_text_NEW_SERVICE_REQUEST_conversazione={0} {1} richiede conversazione per {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_conversazione={0} {1} è disponibile al servizio conversazione per {2}, il {3}
