--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -66,8 +66,8 @@ notif_APPLICATION_ACCEPTED_stampante=Richiesta di stampante accettata
 notif_APPLICATION_REJECTED_stampante=Richiesta di stampante rifiutata
 notif_APPLICATION_DELETED_stampante=Applicazione di stampante annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_stampante={0} {1} richiede stampante per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_stampante={0} {1} è disponibile al servizio stampante per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_stampante={0} {1} richiede stampante il {3} 
+notif_text_NEW_SERVICE_OFFER_stampante={0} {1} è disponibile al servizio stampante il {3}
 
 #FAX
 notif_NEW_SERVICE_REQUEST_fax=Nuova richiesta di fax 
@@ -79,8 +79,8 @@ notif_APPLICATION_ACCEPTED_fax=Richiesta di fax accettata
 notif_APPLICATION_REJECTED_fax=Richiesta di fax rifiutata
 notif_APPLICATION_DELETED_fax=Applicazione di fax annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_fax={0} {1} richiede fax per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_fax={0} {1} è disponibile al servizio fax per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_fax={0} {1} richiede fax il {3} 
+notif_text_NEW_SERVICE_OFFER_fax={0} {1} è disponibile al servizio fax il {3}
 
 #POSTAZIONE
 notif_NEW_SERVICE_REQUEST_postazione=Nuova richiesta di postazione 
@@ -92,8 +92,8 @@ notif_APPLICATION_ACCEPTED_postazione=Richiesta di postazione accettata
 notif_APPLICATION_REJECTED_postazione=Richiesta di postazione rifiutata
 notif_APPLICATION_DELETED_postazione=Applicazione di postazione annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_postazione={0} {1} richiede postazione per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_postazione={0} {1} è disponibile al servizio postazione per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_postazione={0} {1} richiede postazione in {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_postazione={0} {1} è disponibile al servizio postazione in {2}, il {3}
 
 #SALA
 notif_NEW_SERVICE_REQUEST_sala=Nuova richiesta di sala 
@@ -105,8 +105,8 @@ notif_APPLICATION_ACCEPTED_sala=Richiesta di sala accettata
 notif_APPLICATION_REJECTED_sala=Richiesta di sala rifiutata
 notif_APPLICATION_DELETED_sala=Applicazione di sala annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_sala={0} {1} richiede sala per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_sala={0} {1} è disponibile al servizio sala per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_sala={0} {1} richiede sala in {2}, il {3} 
+notif_text_NEW_SERVICE_OFFER_sala={0} {1} è disponibile al servizio sala in {2}, il {3}
 
 #CONVERSAZIONE
 notif_NEW_SERVICE_REQUEST_conversazione=Nuova richiesta di conversazione 
@@ -118,5 +118,5 @@ notif_APPLICATION_ACCEPTED_conversazione=Richiesta di conversazione accettata
 notif_APPLICATION_REJECTED_conversazione=Richiesta di conversazione rifiutata
 notif_APPLICATION_DELETED_conversazione=Applicazione di conversazione annulata
 # name/surname of the offering person; poi name, date/time of the request
-notif_text_NEW_SERVICE_REQUEST_conversazione={0} {1} richiede conversazione per {2}, il {3} 
-notif_text_NEW_SERVICE_OFFER_conversazione={0} {1} è disponibile al servizio conversazione per {2}, il {3}
+notif_text_NEW_SERVICE_REQUEST_conversazione={0} {1} richiede conversazione il {3} 
+notif_text_NEW_SERVICE_OFFER_conversazione={0} {1} è disponibile al servizio conversazione il {3}
