Working on requests

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -6,6 +6,7 @@
   "cancel": "Annulla",
   "save": "Salva",
   "modify": "Modifica",
+  "state": "Stato",
   "home": "Home",
   "notifications": "Notifiche",
   "history": "Storico",
@@ -53,8 +54,10 @@
   "search_title": "Ricerca offerte",
   "searchresults_desc": "Tocca un risultato per vedere i dettagli della singola offerta",
   "newrequest_title": "Nuova richiesta",
-  "newrequest_desc": "Per creare una nuova richiesta scegliere l'ufficio e specificare data e ora.",
-  "newrequest_done": "Richiesta creata con successo",
+  "newrequest_date": "Per il giorno",
+  "newrequest_time": "alle ore",
+  "newrequest_subtypes": "Specifiche del servizio",
+  "newrequest_send": "Invia richiesta",
   "newoffer_title": "Nuova offerta",
   "newoffer_desc": "Per creare una nuova offerta scegliere l'ufficio. È possibile specificare data e ora della disponibilità.",
   "newoffer_done": "Offerta creata con successo",
@@ -76,11 +79,16 @@
   "poi_filter_placeholder": "Filtra...",
   "requests_empty": "Nessuna richiesta trovata",
   "request_detail": "Dettaglio richiesta",
+  "request_detail_offered_by": "offerto da",
   "request_detail_poi": "Richiesta di sostituzione in",
+  "request_detail_request": "Richiesta",
   "request_detail_date": "per il giorno",
+  "request_detail_time": "alle ore",
+  "request_detail_state": "Stato",
   "request_delete_confirm_title": "Conferma eliminazione",
   "request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
   "request_delete_done": "Richiesta eliminata",
+  "request_create_done": "Richiesta inviata",
   "offers_empty": "Nessuna offerta trovata",
   "offer_detail": "Dettaglio offerta",
   "offer_detail_poi": "Offerta di disponibilità per",
@@ -134,8 +142,8 @@
   "allZones_label": "Tutte le province",
   "allServices_label": "Tutti i servizi",
   "services_empty": "Nessun servizio trovato",
-  "service_viewprofile": "Vedi profilo",
-  "service_cost_free": "gratis",
+  "view_profile": "Vedi profilo",
+  "cost_free": "gratis",
   "service_new_request": "Richiedi disponibilità",
   "service_request": "Richiesta servizio",
   "prof_competences_label": "Competenze",
@@ -153,10 +161,12 @@
   "profession_popup_placeholder": "Selezione professione",
   "area_placeholder": "Provincia *",
   "area_popup_placeholder": "Seleziona la provincia in cui operi",
+  "office_placeholder": "Ufficio",
+  "office_popup_placeholder": "Selezione professione",
   "registration2_button_label": "Avanti",
   "retype-password": "Conferma password *",
   "reqandoff": "Richieste/Offerte?",
-  "req_tab_1": "Richieste agli altri",
+  "req_tab_1": "Richieste ad altri",
   "req_tab_2": "Richieste a me",
   "prof_info": "Info",
   "prof_services": "Servizi",
@@ -175,5 +185,13 @@
   "service_deleted_toast": "Il servizio stato è cancellato",
   "modal_professions": "Seleziona una categoria professionale:",
   "modal_services": "Seleziona una categoria di servizi:",
-  "modal_zones": "Seleziona una provincia:"
+  "modal_zones": "Seleziona una provincia:",
+  "state_OPEN": "in attesa",
+  "state_long_OPEN": "in attesa di conferma disponibilità",
+  "state_CLOSED": "chiusa ???",
+  "state_long_CLOSED": "chiusa perché?!?",
+  "state_ACCEPTED": "accettata",
+  "state_long_ACCEPTED": "accettata dall'offerente",
+  "state_REJECTED": "rifiutata",
+  "state_long_REJECTED": "rifiutata dall'offerente"
 }
