fix for message strings

--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -47,6 +47,8 @@ reset.subject=CNF: Password reset request
 notif_NEW_SERVICE_REQUEST_sostituzioneudienza=Nuova richiesta di sostituzione udienza
 notif_NEW_SERVICE_OFFER_sostituzioneudienza=Nuova disponibilità sostituzione udienza
 notif_SERVICE_REQUEST_DELETED_sostituzioneudienza=Richiesta di sostituizione annulata
+notif_REQUEST_ACCEPTED_sostituzioneudienza=Richiesta di sostituizione accettata
+notif_REQUEST_REJECTED_sostituzioneudienza=Richiesta di sostituizione rifiutata
 notif_SERVICE_OFFER_DELETED_sostituzioneudienza=Disponibilità di sostituizione annulata
 notif_NEW_APPLICATION_sostituzioneudienza=Nuova applicazione di sostituizione 
 notif_APPLICATION_ACCEPTED_sostituzioneudienza=Richiesta di sostituizione accettata
@@ -60,6 +62,8 @@ notif_text_NEW_SERVICE_OFFER_sostituzioneudienza={0} {1} è disponibile a sostitu
 notif_NEW_SERVICE_REQUEST_stampante=Nuova richiesta di stampante 
 notif_NEW_SERVICE_OFFER_stampante=Nuova disponibilità stampante
 notif_SERVICE_REQUEST_DELETED_stampante=Richiesta di stampante annulata
+notif_REQUEST_ACCEPTED_stampante=Richiesta di stampante accettata
+notif_REQUEST_REJECTED_stampante=Richiesta di stampante rifiutata
 notif_SERVICE_OFFER_DELETED_stampante=Disponibilità di stampante annulata
 notif_NEW_APPLICATION_stampante=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_stampante=Richiesta di stampante accettata
@@ -73,6 +77,8 @@ notif_text_NEW_SERVICE_OFFER_stampante={0} {1} è disponibile al servizio stampan
 notif_NEW_SERVICE_REQUEST_fax=Nuova richiesta di fax 
 notif_NEW_SERVICE_OFFER_fax=Nuova disponibilità fax
 notif_SERVICE_REQUEST_DELETED_fax=Richiesta di fax annulata
+notif_REQUEST_ACCEPTED_fax=Richiesta di fax accettata
+notif_REQUEST_REJECTED_fax=Richiesta di fax rifiutata
 notif_SERVICE_OFFER_DELETED_fax=Disponibilità di fax annulata
 notif_NEW_APPLICATION_fax=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_fax=Richiesta di fax accettata
@@ -86,6 +92,8 @@ notif_text_NEW_SERVICE_OFFER_fax={0} {1} è disponibile al servizio fax il {3}
 notif_NEW_SERVICE_REQUEST_postazione=Nuova richiesta di postazione 
 notif_NEW_SERVICE_OFFER_postazione=Nuova disponibilità postazione
 notif_SERVICE_REQUEST_DELETED_postazione=Richiesta di postazione annulata
+notif_REQUEST_ACCEPTED_postazione=Richiesta di postazione accettata
+notif_REQUEST_REJECTED_postazione=Richiesta di postazione rifiutata
 notif_SERVICE_OFFER_DELETED_postazione=Disponibilità di postazione annulata
 notif_NEW_APPLICATION_postazione=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_postazione=Richiesta di postazione accettata
@@ -99,6 +107,8 @@ notif_text_NEW_SERVICE_OFFER_postazione={0} {1} è disponibile al servizio postaz
 notif_NEW_SERVICE_REQUEST_sala=Nuova richiesta di sala 
 notif_NEW_SERVICE_OFFER_sala=Nuova disponibilità sala
 notif_SERVICE_REQUEST_DELETED_sala=Richiesta di sala annulata
+notif_REQUEST_ACCEPTED_sala=Richiesta di sala accettata
+notif_REQUEST_REJECTED_sala=Richiesta di sala rifiutata
 notif_SERVICE_OFFER_DELETED_sala=Disponibilità di sala annulata
 notif_NEW_APPLICATION_sala=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_sala=Richiesta di sala accettata
@@ -112,6 +122,8 @@ notif_text_NEW_SERVICE_OFFER_sala={0} {1} è disponibile al servizio sala in {2},
 notif_NEW_SERVICE_REQUEST_conversazione=Nuova richiesta di conversazione 
 notif_NEW_SERVICE_OFFER_conversazione=Nuova disponibilità conversazione
 notif_SERVICE_REQUEST_DELETED_conversazione=Richiesta di conversazione annulata
+notif_REQUEST_ACCEPTED_conversazione=Richiesta di conversazione accettata
+notif_REQUEST_REJECTED_conversazione=Richiesta di conversazione rifiutata
 notif_SERVICE_OFFER_DELETED_conversazione=Disponibilità di conversazione annulata
 notif_NEW_APPLICATION_conversazione=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_conversazione=Richiesta di conversazione accettata
