A lot of changes for professional, services and requests

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -7,6 +7,9 @@
   "save": "Salva",
   "modify": "Modifica",
   "state": "Stato",
+  "reject": "Rifiuta",
+  "accept": "Conferma",
+  "cancel_reservation": "Annulla prenotazione",
   "home": "Home",
   "notifications": "Notifiche",
   "history": "Storico",
@@ -78,21 +81,28 @@
   "poi_select": "Seleziona l'ufficio che ti interessa",
   "poi_filter_placeholder": "Filtra...",
   "requests_empty": "Nessuna richiesta trovata",
-  "request_detail": "Dettaglio richiesta",
+  "request_detail_to": "Richiesta a",
+  "request_detail_by": "Richiesta di",
+  "request_detail_mine": "Dettaglio mia richiesta",
+  "request_detail_tome": "Dettaglio richiesta a me",
   "request_detail_offered_by": "offerto da",
   "request_detail_poi": "Richiesta di sostituzione in",
   "request_detail_request": "Richiesta",
   "request_detail_date": "per il giorno",
   "request_detail_time": "alle ore",
   "request_detail_state": "Stato",
+  "request_create_done": "Richiesta inviata",
   "request_delete_confirm_title": "Conferma eliminazione",
   "request_delete_confirm_text": "Vuoi davvero eliminare questa richiesta?",
   "request_delete_done": "Richiesta eliminata",
-  "request_create_done": "Richiesta inviata",
+  "request_reject_confirm_title": "Conferma rifiuto",
+  "request_reject_confirm_text": "Vuoi davvero rifiutare questa richiesta?",
+  "request_reject_done": "Richiesta rifiutata",
   "offers_empty": "Nessuna offerta trovata",
   "offer_detail": "Dettaglio offerta",
   "offer_detail_poi": "Offerta di disponibilità per",
   "offer_detail_date": "per il giorno",
+  "offer_detail_requested_by": "richiesto da",
   "offer_delete_confirm_title": "Conferma eliminazione",
   "offer_delete_confirm_text": "Vuoi davvero eliminare questa offerta?",
   "offer_delete_done": "Offerta eliminata",
