--- a/gi-pro-web/src/main/resources/locale/messages_en.properties
+++ b/gi-pro-web/src/main/resources/locale/messages_en.properties
@@ -57,6 +57,9 @@ notif_APPLICATION_DELETED_sostituzioneudienza=Applicazione di sostituizione annu
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_sostituzioneudienza={0} {1} richiede sostituzione udienza per {2}, il {3} 
 notif_text_NEW_SERVICE_OFFER_sostituzioneudienza={0} {1} è disponibile a sostituzione udienza per {2}, il {3}
+notif_text_REQUEST_ACCEPTED_sostituzioneudienza={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_sostituzioneudienza={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_sostituzioneudienza={0} {1} ha cancellato la richiesta del {3}
 
 #STAMPANTE
 notif_NEW_SERVICE_REQUEST_stampante=Nuova richiesta di stampante 
@@ -72,6 +75,9 @@ notif_APPLICATION_DELETED_stampante=Applicazione di stampante annulata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_stampante={0} {1} richiede stampante il {3} 
 notif_text_NEW_SERVICE_OFFER_stampante={0} {1} è disponibile al servizio stampante il {3}
+notif_text_REQUEST_ACCEPTED_stampante={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_stampante={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_stampante={0} {1} ha cancellato la richiesta del {3}
 
 #FAX
 notif_NEW_SERVICE_REQUEST_fax=Nuova richiesta di fax 
@@ -87,6 +93,9 @@ notif_APPLICATION_DELETED_fax=Applicazione di fax annulata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_fax={0} {1} richiede fax il {3} 
 notif_text_NEW_SERVICE_OFFER_fax={0} {1} è disponibile al servizio fax il {3}
+notif_text_REQUEST_ACCEPTED_fax={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_fax={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_fax={0} {1} ha cancellato la richiesta del {3}
 
 #POSTAZIONE
 notif_NEW_SERVICE_REQUEST_postazione=Nuova richiesta di postazione 
@@ -102,6 +111,9 @@ notif_APPLICATION_DELETED_postazione=Applicazione di postazione annulata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_postazione={0} {1} richiede postazione in {2}, il {3} 
 notif_text_NEW_SERVICE_OFFER_postazione={0} {1} è disponibile al servizio postazione in {2}, il {3}
+notif_text_REQUEST_ACCEPTED_postazione={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_postazione={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_postazione={0} {1} ha cancellato la richiesta del {3}
 
 #SALA
 notif_NEW_SERVICE_REQUEST_sala=Nuova richiesta di sala 
@@ -117,6 +129,9 @@ notif_APPLICATION_DELETED_sala=Applicazione di sala annulata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_sala={0} {1} richiede sala in {2}, il {3} 
 notif_text_NEW_SERVICE_OFFER_sala={0} {1} è disponibile al servizio sala in {2}, il {3}
+notif_text_REQUEST_ACCEPTED_sala={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_sala={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_sala={0} {1} ha cancellato la richiesta del {3}
 
 #CONVERSAZIONE
 notif_NEW_SERVICE_REQUEST_conversazione=Nuova richiesta di conversazione 
@@ -132,3 +147,6 @@ notif_APPLICATION_DELETED_conversazione=Applicazione di conversazione annulata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_conversazione={0} {1} richiede conversazione il {3} 
 notif_text_NEW_SERVICE_OFFER_conversazione={0} {1} è disponibile al servizio conversazione il {3}
+notif_text_REQUEST_ACCEPTED_conversazione={0} {1} ha accettato la richiesta del {3}
+notif_text_REQUEST_REJECTED_conversazione={0} {1} ha rifiutato la richiesta del {3}
+notif_text_REQUEST_DELETED_conversazione={0} {1} ha cancellato la richiesta del {3}
