--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -156,6 +156,7 @@
   "allServices_label": "Tutti i servizi",
   "services_empty": "Nessun servizio trovato",
   "view_profile": "Vedi profilo",
+  "view_details": "Vedi dettagli",
   "cost_free": "gratis",
   "service_new_request": "Richiedi disponibilità",
   "service_request": "Richiesta servizio",
