--- a/gi-pro-web/src/main/resources/locale/messages.properties
+++ b/gi-pro-web/src/main/resources/locale/messages.properties
@@ -54,6 +54,7 @@ notif_NEW_APPLICATION_sostituzioneudienza=Nuova applicazione di sostituizione
 notif_APPLICATION_ACCEPTED_sostituzioneudienza=Richiesta di sostituizione accettata
 notif_APPLICATION_REJECTED_sostituzioneudienza=Richiesta di sostituizione rifiutata
 notif_APPLICATION_DELETED_sostituzioneudienza=Applicazione di sostituizione annulata
+notif_REQUEST_DELETED_sostituzioneudienza=Applicazione di sostituizione cancellata
 # name/surname of the offering person; poi name, date/time of the request
 notif_text_NEW_SERVICE_REQUEST_sostituzioneudienza={0} {1} richiede sostituzione udienza per {2}, il {3} 
 notif_text_NEW_SERVICE_OFFER_sostituzioneudienza={0} {1} è disponibile a sostituzione udienza per {2}, il {3}
@@ -67,6 +68,7 @@ notif_NEW_SERVICE_OFFER_stampante=Nuova disponibilità stampante
 notif_SERVICE_REQUEST_DELETED_stampante=Richiesta di stampante annulata
 notif_REQUEST_ACCEPTED_stampante=Richiesta di stampante accettata
 notif_REQUEST_REJECTED_stampante=Richiesta di stampante rifiutata
+notif_REQUEST_DELETED_stampante=Richiesta di stampante cancellata
 notif_SERVICE_OFFER_DELETED_stampante=Disponibilità di stampante annulata
 notif_NEW_APPLICATION_stampante=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_stampante=Richiesta di stampante accettata
@@ -85,6 +87,7 @@ notif_NEW_SERVICE_OFFER_fax=Nuova disponibilità fax
 notif_SERVICE_REQUEST_DELETED_fax=Richiesta di fax annulata
 notif_REQUEST_ACCEPTED_fax=Richiesta di fax accettata
 notif_REQUEST_REJECTED_fax=Richiesta di fax rifiutata
+notif_REQUEST_DELETED_fax=Richiesta di fax cancellata
 notif_SERVICE_OFFER_DELETED_fax=Disponibilità di fax annulata
 notif_NEW_APPLICATION_fax=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_fax=Richiesta di fax accettata
@@ -103,6 +106,7 @@ notif_NEW_SERVICE_OFFER_postazione=Nuova disponibilità postazione
 notif_SERVICE_REQUEST_DELETED_postazione=Richiesta di postazione annulata
 notif_REQUEST_ACCEPTED_postazione=Richiesta di postazione accettata
 notif_REQUEST_REJECTED_postazione=Richiesta di postazione rifiutata
+notif_REQUEST_DELETED_postazione=Richiesta di postazione cancellata
 notif_SERVICE_OFFER_DELETED_postazione=Disponibilità di postazione annulata
 notif_NEW_APPLICATION_postazione=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_postazione=Richiesta di postazione accettata
@@ -121,6 +125,7 @@ notif_NEW_SERVICE_OFFER_sala=Nuova disponibilità sala
 notif_SERVICE_REQUEST_DELETED_sala=Richiesta di sala annulata
 notif_REQUEST_ACCEPTED_sala=Richiesta di sala accettata
 notif_REQUEST_REJECTED_sala=Richiesta di sala rifiutata
+notif_REQUEST_DELETED_sala=Richiesta di sala cancellata
 notif_SERVICE_OFFER_DELETED_sala=Disponibilità di sala annulata
 notif_NEW_APPLICATION_sala=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_sala=Richiesta di sala accettata
@@ -139,6 +144,7 @@ notif_NEW_SERVICE_OFFER_conversazione=Nuova disponibilità conversazione
 notif_SERVICE_REQUEST_DELETED_conversazione=Richiesta di conversazione annulata
 notif_REQUEST_ACCEPTED_conversazione=Richiesta di conversazione accettata
 notif_REQUEST_REJECTED_conversazione=Richiesta di conversazione rifiutata
+notif_REQUEST_DELETED_conversazione=Richiesta di sala cancellata
 notif_SERVICE_OFFER_DELETED_conversazione=Disponibilità di conversazione annulata
 notif_NEW_APPLICATION_conversazione=Nuova applicazione di stampante
 notif_APPLICATION_ACCEPTED_conversazione=Richiesta di conversazione accettata
