Fixed some issues and added some enhancements

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -1,5 +1,5 @@
 {
-  "app": "GiPro",
+  "app": "Smart GiPro",
   "app_label": "App",
   "ok": "OK",
   "close": "Chiudi",
@@ -127,6 +127,8 @@
   "NEW_SERVICE_OFFER": "Nuova disponibilità di sostituzione",
   "NEW_SERVICE_REQUEST": "Nuova richiesta di sostituzione",
   "REQUEST_ACCEPTED": "Richiesta accettata",
+  "REQUEST_REJECTED": "Richiesta rifiutata",
+  "REQUEST_DELETED": "Richiesta annullata",
   "matching_requests": "Richieste corrispondenti",
   "matching_offers": "Disponibilità corrispondenti",
   "credits_project": "Un progetto di:",
@@ -158,6 +160,8 @@
   "view_profile": "Vedi profilo",
   "view_details": "Vedi dettagli",
   "cost_free": "gratis",
+  "gipro_point": "punto GiPro",
+  "gipro_points": "punti GiPro",
   "service_new_request": "Richiedi disponibilità",
   "service_request": "Richiesta servizio",
   "prof_competences_label": "Competenze",
@@ -168,9 +172,9 @@
   "name_placeholder": "Nome *",
   "surname_placeholder": "Cognome *",
   "address_placeholder": "Indirizzo ufficio *",
-  "cf_placeholder": "Inserisci il tuo codice fiscale",
+  "cf_placeholder": "Codice Fiscale *",
   "albo_placeholder": "Numero di iscrizione all'albo *",
-  "piva_placeholder": "Inserisci la tua Partita IVA",
+  "piva_placeholder": "Partita IVA",
   "profession_placeholder": "Professione *",
   "profession_popup_placeholder": "Selezione professione",
   "area_placeholder": "Provincia *",
