--- a/gi-pro-web/src/main/resources/locale/messages.properties
+++ b/gi-pro-web/src/main/resources/locale/messages.properties
@@ -40,8 +40,8 @@ lbl_resetsuccess_text=Apri il link nella email di conferma per aggiornare le cre
 lbl_changesuccess_title=La password è stata aggiornata!
 lbl_changesuccess_text=Hai aggiornato le credenziali.
 
-confirmation.subject=CNF: Conferma la registrazione 
-reset.subject=CNF: Richiesta di cambiamento di credenziali
+confirmation.subject=Smart GiPro: Conferma la registrazione 
+reset.subject=Smart GiPro: Richiesta di cambiamento di credenziali
 
 #SOSTITUZIONE UDIENZA
 notif_NEW_SERVICE_REQUEST_sostituzioneudienza=Nuova richiesta di sostituzione udienza
