--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -80,6 +80,7 @@
   "poi_region_placeholder": "Tocca per scegliere la regione",
   "poi_region_placeholder_notneeded": "Regione non necessaria per questo tipo",
   "poi_select": "Seleziona l'ufficio che ti interessa",
+  "poi_select_map": "Seleziona sulla mappa",
   "poi_filter_placeholder": "Filtra...",
   "requests_empty": "Nessuna richiesta trovata",
   "request_detail_to": "Richiesta a",
@@ -195,7 +196,7 @@
   "service_note_placeholder": "Informazioni aggiuntive",
   "service_zone_placeholder": "Seleziona la zona",
   "service_address_placeholder": "Indirizzo",
-  "popup_address": "Indirizzo",
+  "popup_address": "Indirizzo selezionato",
   "btn_close": "Chiudi",
   "btn_conferma": "Conferma",
   "save_first_toggle": "Salvare o annullare le modifiche",
