Handle professional image

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -45,7 +45,8 @@
   "register_form_cf_invalid": "Codice Fiscale non valido",
   "register_form_pwd_empty": "Compilare entrambi i campi password",
   "register_form_pwd_different": "Le password non corrispondono",
-  "register_done": "La registrazione è avvenuta con successo. A breve riceverai una mail di conferma.",
+  "register_done_title": "La registrazione è avvenuta con successo.",
+  "register_done_text": "A breve riceverai una mail ed una PEC di conferma con un link per attivare il tuo account.",
   "search": "Cerca",
   "create": "Crea",
   "delete": "Elimina",
