--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -145,7 +145,7 @@
   "tutorial_requests": "Inserisci le tue richieste di sostituzione udienza",
   "tutorial_details": "Contatta direttamente il collega",
   "tutorial_functions": "Accedi alle funzionalità della app",
-  "tutorial_title": "GiPro App",
+  "tutorial_title": "Smart GiPro",
   "tutorial_s1_1": "Consulta la lista dei professionisti e trova quello che fa per te",
   "tutorial_s1_2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
   "tutorial_s1_3": "Clicca 'Accedi' per accedere alla app.",
