Fix for map, missing address, new strings

--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -41,6 +41,11 @@
   "register_privacy_info": "Informativa sulla privacy",
   "register_privacy_link": "http://www.smartcommunitylab.it",
   "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
+  "register_form_name_empty": "Il nome non può essere vuoto",
+  "register_form_surname_empty": "Il cognome non può essere vuoto",
+  "register_form_address_empty": "L'indirizzo non è valido",
+  "register_form_profession_empty": "Scegliere la professione",
+  "register_form_area_empty": "Scegliere la provincia",
   "register_form_cf_empty": "Inserire il Codice Fiscale",
   "register_form_cf_invalid": "Codice Fiscale non valido",
   "register_form_pwd_empty": "Compilare entrambi i campi password",
@@ -137,6 +142,7 @@
   "credits_developer": "realizzata da:",
   "credits_initiative": "su un'iniziativa di",
   "credits_info": "Per informazioni",
+  "profile_form_address_empty": "L'indirizzo non è valido",
   "profile_form_phone_empty": "Inserire il numero di telefono",
   "offer_not_exist": "Offerta di sostituzione non esiste",
   "request_not_exist": "Richiesta di sostituzione non esiste",
