--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -172,6 +172,7 @@
   "gipro_points": "punti GiPro",
   "service_new_request": "Richiedi disponibilità",
   "service_request": "Richiesta servizio",
+  "service_tecnotoga": "Questa è una funzione riservata ai professionisti trentini. TECNOTOGA, sviluppata dal Consiglio Nazionale Forense, implementa questa funzionalità per tutti gli avvocati italiani.",
   "prof_competences_label": "Competenze",
   "prof_descrizione_label": "Descrizione",
   "search_placeholder": "Cerca cognome e competenze",
