--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -223,5 +223,6 @@
   "state_long_REJECTED": "rifiutata dall'offerente",
   "state_DELETED": "cancellata",
   "state_long_DELETED": "cancellata dall'offerente",
-  "error_InsufficientBalanceException": "Il tuo credito è insufficiente. Attendi il rinnovo mensile."
+  "error_InsufficientBalanceException": "Il tuo credito è insufficiente. Attendi il rinnovo mensile.",
+  "pop_up_error_server_template": "Errore di comunicazione con il server"
 }
