--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -159,12 +159,16 @@
   "tutorial_s2": "Sei un professionista? Accedi e metti a disposizione di altri professionisti servizi e prestazioni",
   "service_tab": "Servizi",
   "prof_tab": "Professionisti",
+  "filter_open": "Filtra risultati",
+  "filter_close": "Chiudi filtro",
   "selectedProfession_label": "Professione",
   "selectedZone_label": "Zona",
   "selectedService_label": "Servizio",
   "allProfession_label": "Tutte le professioni",
   "allZones_label": "Tutte le province",
   "allServices_label": "Tutti i servizi",
+  "selectedZone_full_label": "Provincia di {{zone}}", 
+  "selectedZone_mid_label": " di {{zone}}",
   "services_empty": "Nessun servizio trovato",
   "view_profile": "Vedi profilo",
   "view_details": "Vedi dettagli",
