--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -157,6 +157,9 @@
   "tutorial_s1_2": "Scorri le immagini da destra a sinistra per scoprire le funzionalità.",
   "tutorial_s1_3": "Clicca 'Accedi' per accedere alla app.",
   "tutorial_s2": "Sei un professionista? Accedi e metti a disposizione di altri professionisti servizi e prestazioni",
+  "profile_completion_popup": "Per ottimizzare il funzionamento della app ti chiediamo di completare il tuo profilo professionale",
+  "profile_completion_fill": "Compila profilo",
+  "profile_completion_checkbox": "Non mostrare più",
   "service_tab": "Servizi",
   "prof_tab": "Professionisti",
   "filter_open": "Filtra risultati",
