--- a/gi-pro-mobile/www/languages/it.json
+++ b/gi-pro-mobile/www/languages/it.json
@@ -18,7 +18,7 @@
   "login_subtitle_2": "Accedi con le tue credenziali:",
   "login": "Entra",
   "login_as_pro": "ACCEDI COME PROFESSIONISTA",
-  "enter_no_login": "ENTRA SENZA LOGIN",
+  "enter_no_login": "CERCA UN PROFESSIONISTA",
   "logout": "Esci",
   "error_signin": "Errore in fase di login",
   "credits": "Credits",
@@ -37,9 +37,9 @@
   "register_new_account": "Registrati inserendo i seguenti dati:",
   "register_mandatory_fields": "I campi contrassegnati con il simbolo * sono obbligatori.",
   "register_moreinfo": "Ti chiediamo di inserire alcune informazioni aggiuntive per completare il tuo profilo.",
-  "register_declaration": "Dichiaro di essere un professionista appartenente alla categoria professionale indicata",
+  "register_declaration_category": "Dichiaro di essere un professionista appartenente alla categoria professionale indicata",
   "register_privacy_info": "Informativa sulla privacy",
-  "register_privacy_link": "http://www.smartcommunitylab.it",
+  "register_privacy_link": "http://gipro.tn.it/privacy-app-smart-gipro",
   "register_privacy_accept": "Dichiaro di aver letto ed accettato l'informativa sulla privacy",
   "register_form_name_empty": "Il nome non può essere vuoto",
   "register_form_surname_empty": "Il cognome non può essere vuoto",
@@ -139,9 +139,10 @@
   "REQUEST_DELETED": "Richiesta annullata",
   "matching_requests": "Richieste corrispondenti",
   "matching_offers": "Disponibilità corrispondenti",
-  "credits_project": "Un progetto di:",
-  "credits_developer": "realizzata da:",
-  "credits_initiative": "su un'iniziativa di",
+  "credits_initiative": "è un'iniziativa promossa da",
+  "credits_project": "su un progetto di",
+  "credits_contribute": "con il contributo di",
+  "credits_developer": "realizzata da",
   "credits_info": "Per informazioni",
   "profile_form_address_empty": "L'indirizzo non è valido",
   "profile_form_phone_empty": "Inserire il numero di telefono",
@@ -200,7 +201,7 @@
   "office_popup_placeholder": "Selezione professione",
   "registration2_button_label": "Avanti",
   "retype-password": "Conferma password *",
-  "reqandoff": "Richieste/Offerte?",
+  "reqandoff": "Richieste e Offerte",
   "req_tab_1": "Richieste ad altri",
   "req_tab_2": "Richieste a me",
   "prof_info": "Info",
